[package]
name = "hello-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
env_logger = "0.10.0"
actix-session = {version="0.7.2", features = ["cookie-session"]}
actix-multipart = "0.5.0"
uuid = {version="1.3.0", features=["v4"]}
sanitize-filename = "0.4.0"
futures-util = "0.3.26"